test_suite/tests/compile-fail/macros/sm/empty-machine.rs
extern crate sm;
use sm::sm;

sm!{
    TurnStile {}
    //~^ ERROR unexpected end of input, expected identifier
}

fn main() {}
